manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: felica-oracle
  labels:
    name: felica-oracle
